Fix input with caret alignment

--- a/sass/styleguide/objects/_forms.scss
+++ b/sass/styleguide/objects/_forms.scss
@@ -60,7 +60,6 @@ $input-v-padding: ($input-height - $input-line-height)/2;
         @include abs-pos(0, 0, 0, 0);
         cursor: pointer;
         padding: $input-v-padding 1rem;
-        position: absolute;
         width: 100%;
 
         &:-moz-focusring {
@@ -71,8 +70,8 @@ $input-v-padding: ($input-height - $input-line-height)/2;
 
     & > input[type=text] {
         @include abs-pos(0, 0, 0, 0);
-        padding: $input-v-padding 3rem $input-v-padding 1rem;
-        position: absolute;
+        padding: 0 3rem 0 1rem;
+        height: 100%;
         width: 100%;
         border: 0;
     }
